# zotqa

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/zotqa/: chat.py  cli.py  ui.py
src/zotqa/extract/: __init__.py  db.py  export.py
src/zotqa/prompts/: __init__.py  system.md  user.md
src/zotqa/rag/: __init__.py  chunk.py  embed.py  index.py  llm.py  query.py  retrieve.py
tests/: __init__.py  test_cli.py  test_prompts.py  test_rag.py
